--- a/journals/2023_08_11.md
+++ b/journals/2023_08_11.md
@@ -56,7 +56,7 @@
 			- HttpOnly属性
 				- HttpOnly属性がついたCookieはJavaScriptからアクセス出来ない
 				- HttpOnly属性をつけてもXSSを完全に防ぐことは出来ないが、XSSが難しくなる
-- ### 受動的攻撃と同一オリジンポリシー
+- ### 3.2 受動的攻撃と同一オリジンポリシー
 	- 能動的攻撃と受動的攻撃
 		- 能動的攻撃は攻撃者がサーバに直接攻撃をすること
 		- 受動的攻撃は攻撃者がサーバを直接攻撃するのではなく、Webサイトの利用者に罠を仕掛けて、罠を閲覧したユーザを通じて攻撃を行う手法
@@ -71,7 +71,7 @@
 		- <frame src="...">, <iframe src="...">, <img src="...">, <script src="...">, <link rel="stylesheet" href="...">, <form action="..."> など
 		- <script src="...">に同一生成元ポリシーが適用されないことを利用して、XHRの代用としたのがJSONP
 			- CORSが登場したことで使われなくなった
-- ### CORS(Cross-Origin Resource Sharing)
+- ### 3.3 CORS(Cross-Origin Resource Sharing)
 	- 同一生成元ポリシーの緩和策で、相手側オリジンの許可があれば、相手側オリジンのリソースを取得したり、操作出来るというもの
 	- [CORSの仕様はなぜ複雑なのか](https://zenn.dev/qnighy/articles/6ff23c47018380)を見てCORSの仕様を理解する
 		- 素朴な仕様
