--- a/journals/2023_08_11.md
+++ b/journals/2023_08_11.md
@@ -10,12 +10,12 @@
 		- 名前と値はパーセントエンコードされている(urlencodedとついているのはそのため)
 	- パーセントエンコーディング
 		- URL上で特別な意味を持つ記号や日本語などをURL上で記述するために用いる
-			- ブラウザで「あ」の検索結果のURLを見ると、クエリパラメータqに設定されている値が「あ」のパーセントエンコーディングになっている
+			- ブラウザで`あ`の検索結果のURLを見ると、クエリパラメータqに設定されている値が`あ`のパーセントエンコーディングになっている
 			- しかし、URL上とは限らない気が...(application/x-www-form-urlencodedの場合はリクエストボディで使っているので)
 		- バイト単位で%xxの形式で表す
-			- 例えば、「あ」はUTF-8で、E3 81 82 になるので、パーセントエンコーディング後は%E3%81%82になる
-			- スペースは%20となるが、application/x-www-form-urlencodedの場合は「+」になる
-				- 例えば「I'm a programmer」をパーセントエンコーディングすると、I%27m+a+programmerとなる(アポストロフィは%27)
+			- 例えば、`あ`はUTF-8で、`E3 81 82`になるので、パーセントエンコーディング後は`%E3%81%82`になる
+			- スペースは`%20`となるが、application/x-www-form-urlencodedの場合は`+`になる
+				- 例えば`I'm a programmer`をパーセントエンコーディングすると、`I%27m+a+programmer`となる(アポストロフィは`%27`)
 	- Refererヘッダ
 		- リンク元のURLを示すヘッダ
 		- form要素によるフォーム送信、aタグによるリンク、imgタグによる画像参照などでRefererヘッダがつく
