--- a/journals/2023_08_12.md
+++ b/journals/2023_08_12.md
@@ -7,11 +7,11 @@
 	- インジェクション系脆弱性
 		- インジェクション系脆弱性が発生する原理は共通していて、データの終端を表す文字を混入させて、文字列の構造を変化させる
 		- データの終端を表す文字
-			- XSS : <や"
-				- <からタグが開始されるので、これをデータの終端としているらしい(？)
+			- XSS : `<`や`"`
+				- `<`からタグが開始されるので、これをデータの終端としているらしい(？)
 			- HTTPヘッダインジェクション : 改行
-			- SQLインジェクション : '
-			- OSコマンドインジェクション : ;や|
+			- SQLインジェクション : `'`
+			- OSコマンドインジェクション : `;`や`|`
 			- メールヘッダインジェクション : 改行
 - ### 4. 2 入力処理とセキュリティ
 	- 文字エンコーディングの話は飛ばす(6章で文字コードと文字エンコーディングについて説明されるため)
@@ -45,7 +45,7 @@
 		- 制御文字のチェック
 			- 制御文字とは、改行やタブなど通常表示されることのない、ASCIIコード0x20未満及び0x7Fの文字のこと
 			- Webアプリケーションの入力パラメータはテキストの場合が多いので、全ての文字を許容する場合でも、制御文字に関しては制限を設けるべき
-				- PHPの場合、\[[:^cntrl:]]というPOSIX文字クラスによって制御文字以外という指定をすることが出来る
+				- PHPの場合、`[[:^cntrl:]]`というPOSIX文字クラスによって制御文字以外という指定をすることが出来る
 				- textareaタグに入力された値は、改行と場合によってはタブを許容する必要がある
 		- 文字数のチェック
 			- 最大文字数をチェックしておくと、保険的対策になる場合がある
