--- a/journals/2023_08_17.md
+++ b/journals/2023_08_17.md
@@ -77,9 +77,53 @@
 		- データベースの権限設定
 			- データベースのユーザに書き込み権限は与えず、読み込み権限だけ与えるなど
 			- load data infile文はMySQLのFILE権限がないと出来ない
+		- 複文(multiple statements)の実行を禁止する
+			- 複文の実行とは、複数のSQL文をセミコロンで区切って一度に実行すること
+			- 上で書いた`select * from users where age < 1; delete from users`などが複文
+			- 複文の実行を禁止することでSQLインジェクションを緩和することが出来る
+				- GORMやActiveRecordでmultiple statementsと調べてみたが、設定らしきものは出てこなかった(複文は実行出来ない？)
 	- SQLインジェクションと関係のない話
 		- MySQLには暗黙の型変換という機能があり、MySQLが出来る限り型変換をしようとするため、想定外の挙動が起きることがある([参考](https://sakaik.hateblo.jp/entry/20210426/mysql_string_number_auto_exchange_bikkuri))
 		- LIKE句におけるワイルドカードのエスケープ
 			- LIKE句では、`_`は任意の一文字、`%`は0文字以上の任意の文字列にマッチする
 			- そのため、`_`, `%`を検索文字列に含めたい場合はエスケープする必要があり、`\_`, `\%`とすることでエスケープすることが出来る
 			- エスケープのための文字を指定することも出来る(例: `where name like '%りんご100#%%' escape '#'`)
+- ### 4.5 「重要な処理」の際に混入する脆弱性
+- #### 4.5.1 クロスサイト・リクエストフォージェリ(CSRF)
+	- ブラウザはHTTPリクエスト時に、送信元のドメインに関わらず、リクエスト先のドメインのCookieを付与する
+		- 多分Hostヘッダを見て、Cookieを付与している
+		- クロスドメインの場合、Cookieが付与されるかはCookieの属性(Strict, Lax, None)による
+		- CSRFを再現する時はChromeの2分間ルールに注意([[Jul 14th, 2023]])
+	- onloadに送信処理を書くことで、罠サイトを開いたタイミングで処理が実行される
+		- ```html
+		  <body onload="document.forms[0].submit()">
+		    <form action="..." method="POST">
+		      <input type="text" name="pwd" value="cracked">
+		    </form>
+		  <body>
+		  ```
+	- 上に書いた例だと、処理が実行されるとページ遷移(アドレスバーのURLが変わる)してしまうので、攻撃に気付かれてしまう
+		- iframeを使うことでページ遷移しなくて済む
+		- 上に書いたhtmlをcsrf.htmlとして、`<iframe src="csrf.html"></iframe>`を罠ページとする
+		- さらにiframeを見えないようにする
+		- CookieのSamesite属性がLax or Strictである場合は、iframeでのリクエストにCookieがセットされないため、この攻撃は出来ない([参考](https://qiita.com/emacs_hhkb/items/ff6af4361b8a10f781a9#1-samesite-%E5%B1%9E%E6%80%A7))
+	- CSRFは被害者に重要な処理をさせるという攻撃であって、被害者の個人情報を直接盗むことは出来ないが、CSRFによって被害者のパスワードを変更することで、個人情報を盗む事は出来る
+	- 反射型XSSとの違い
+		- CSRFも反射型XSSも攻撃者が罠サイトを用意し、被害者がそれを開くところまでは同じ
+		- CSRFは正規サイトに悪意を持ったリクエストが送信され、反射型XSSでは正規サイトから仕掛けのあるレスポンスが返ってくるという点で異なる
+			- CSRFで出来る悪用内容はサーバ側で用意された処理に限るが、反射型XSSの場合はブラウザで出来ることは何でも悪用出来る(持続型XSSも)
+				- 例えば、仮想通貨のマイニング処理をするなど([参考](https://www.securify.jp/blog/cross-site-scripting/))
+			- そのため、反射型XSS(&持続型XSS)の方が脅威と言える
+	- 確認画面がある場合のCSRF
+		- 入力画面 → 確認画面 → 完了画面というページ遷移を考える
+		- 入力画面から確認画面への入力値の受け渡しはPOSTリクエストで行う
+		- 確認画面から完了画面(というか完了処理)への入力値の受け渡しは以下の2つのやり方がある
+			- POSTリクエストで行う(確認画面に入力値をhiddenパラメータとして埋め込んでおく)
+			- セッション変数を使う(入力画面から受け取ったパラメータをセッション変数に保存する)
+				- 確認画面から完了画面への遷移はGETリクエストで良い
+		- 1つ目のやり方の場合、上で書いた方法と同じCSRFが可能
+		- 2つ目のやり方の場合、CSRFをするためには、罠サイトでiframeを2つ用意して、以下の処理をする必要がある
+			- 1つ目のiframeで確認画面にPOSTリクエストを送信し、セッション変数にパラメータを保存する
+			- 2つ目のiframeでは、パラメータが保存されたであろうタイミング(例えば1つ目のiframeの表示から5秒後など)に、完了画面を呼び出す
+				- これによって、攻撃者が指定したパラメータで完了処理が行われる
+		- ウィザード形式(対話式の入力)の場合はiframeの数を増やせば良い
