--- a/journals/2023_08_17.md
+++ b/journals/2023_08_17.md
@@ -54,7 +54,7 @@
 			- booksテーブルのレコードをWebアプリ上で確認して、/etc/passwdの情報を盗むことが出来る
 	- PHPやPerlなどの型無し言語の場合、文字列項目だけでなく数値項目に対してもSQLインジェクションが発生する可能性がある(本来数値であるべき型に文字列を代入することが出来るため)
 		- `select * from users where age < $age`の`$age`に`1; delete from users`を指定するなど
-	- SQLインジェクションの対策は[[Jul 14th, 2023]]を参照
+	- SQLインジェクションの対策は ((64b01173-e71a-474b-aeff-a7304fab12d0)) を参照
 	- リクエストによって、SQL文の構造が変化する場合、プレースホルダを使わずに、文字列連結を使いたくなってしまうことがある
 		- 検索条件の数が変化する場合
 			- リクエストボディの中に含まれるパラメータを使って検索をする場合
@@ -93,11 +93,11 @@
 	- ブラウザはHTTPリクエスト時に、送信元のドメインに関わらず、リクエスト先のドメインのCookieを付与する
 		- 多分Hostヘッダを見て、Cookieを付与している
 		- クロスドメインの場合、Cookieが付与されるかはCookieの属性(Strict, Lax, None)による
-		- CSRFを再現する時はChromeの2分間ルールに注意([[Jul 14th, 2023]])
+		- CSRFを再現する時はChromeの2分間ルールに注意( ((64b15907-dd2e-4590-ba50-8cb2d6e42d4f)) )
 	- onloadに送信処理を書くことで、罠サイトを開いたタイミングで処理が実行される
 		- ```html
 		  <body onload="document.forms[0].submit()">
-		    <form action="..." method="POST">
+		    <form action="..." method="post">
 		      <input type="text" name="pwd" value="cracked">
 		    </form>
 		  <body>
@@ -115,6 +115,7 @@
 				- 例えば、仮想通貨のマイニング処理をするなど([参考](https://www.securify.jp/blog/cross-site-scripting/))
 			- そのため、反射型XSS(&持続型XSS)の方が脅威と言える
 	- 確認画面がある場合のCSRF
+	  id:: 64de2eda-2702-4d7d-a2c6-b91fb7786005
 		- 入力画面 → 確認画面 → 完了画面というページ遷移を考える
 		- 入力画面から確認画面への入力値の受け渡しはPOSTリクエストで行う
 		- 確認画面から完了画面(というか完了処理)への入力値の受け渡しは以下の2つのやり方がある
