--- a/journals/2023_08_03.md
+++ b/journals/2023_08_03.md
@@ -1,4 +1,4 @@
-- # 暗号技術入門
+# 暗号技術入門
 - ## 第12章 乱数
 - ### 乱数を使用する場面
 	- 対称暗号やメッセージ認証コードにおける鍵の生成
@@ -38,12 +38,13 @@
 		- プログラマすら詳細を理解出来ないような複雑なアルゴリズムを使う
 		- 多くの場合は周期が短くなってしまい予測不可能性を持たなくなってしまうのと、プログラマすら詳細を理解出来ない方法だと、予測不可能性を持つのかの評価が難しくなるため、間違った方法
 	- 線形合同法
+	  id:: 64cbb297-e215-422f-927e-d08b9c058410
 		- R0, R1, R2, ... という擬似乱数の列を生成するとして、R0 = (A x シード値 + C) % M、R1 = (A x R0 + C) % M、R2 = (A x R1 + C) % M、... としていく方法
 			- A, C, Mは定数で、AとCはMより小さい数
 		- 内部状態は最後に生成した擬似乱数の値
 		- 周期は最大でMだが、AとCの選び方によっては極端に周期が短くなってしまう
 		- Mを大きくし、AとCを注意深く選択すれば、無作為性を持つが、予測不可能性は持たないため、暗号技術に使ってはいけない
-			- 攻撃者はA, C, Mを知らなくても、線形合同法で生成された数列から、A, C, Mを逆算することが出来る
+			- 実は、攻撃者はA, C, Mを知らなくても、線形合同法で生成された数列から、A, C, Mを逆算することが出来る(やり方は調べてない)
 		- Cのrand関数とかJavaのjava.util.Randomクラスでは線形合同法が用いられている
 	- 一方向ハッシュ関数を使う方法
 		- 内部状態としてカウンタを持ち、カウンタはシード値で初期化する
