--- a/journals/2023_08_18.md
+++ b/journals/2023_08_18.md
@@ -98,3 +98,27 @@
 		- CookieのSamesite属性がLax or Strictである場合は、iframeでのリクエストにCookieがセットされないため、認証付きの処理がクリックジャッキングでされることはない
 	- 保険的対策
 		- 重要な処理の実行後に利用者のメールアドレスに処理内容を通知する
+- ### 4.6 セッション管理の不備
+- #### 4.6.1 セッションハイジャックの原因と影響
+	- 第三者がセッションIDを知るための手段
+		- セッションIDの推測
+			- ((64cbb297-e215-422f-927e-d08b9c058410)) を使っていると予測される
+			- タイムスタンプをセッションIDにするなどは論外
+		- セッションIDの盗み出し
+			- ((64d5c900-3d96-4797-a297-3828c91d26b1)) の不備
+			- ネットワーク的にセッションIDが盗聴される(CookieのSecure属性がついてないなど)
+			- XSS
+			- HTTPヘッダインジェクション
+			- ブラウザやサーバの脆弱性
+			- ((64d5a6e3-d59b-410c-be84-d7972f5652db)) から漏洩
+		- セッションIDの強制
+			- セッションIDの固定化攻撃(session fixation)
+	- セッションハイジャックの影響
+		- 利用者の持つ重要情報の閲覧、利用者に成りすまして操作が行われる
+		- しかし利用者のパスワードまでは分からない(分かるということはサーバがパスワードを平文で保存していることを意味する)
+		- そのため、重要な処理の前に再認証を要求すると、セッションハイジャックに対する保険的な対策になる
+- #### 4.6.2 推測可能なセッションID
+	- 対象アプリケーションからセッションIDを集めて、規則性の仮説を立てて推測する
+	- フレームワークが備えるセッション管理機構を用いるのがベスト
+		- とはいうものの、PHPの7.0まではデフォルトで、リモートIPアドレス、現在時刻、予測不可能性を持たない乱数の組み合わせにMD5ハッシュ関数を通す方法でセッションIDが生成されていた
+		- 極めて限定された条件ではあるが、セッションIDが推測可能
