--- a/journals/2023_08_11.md
+++ b/journals/2023_08_11.md
@@ -54,6 +54,12 @@
 				- Domain属性を設定すると、そのドメインとサブドメインに送信される(Domain属性がexample.jpならa.example.jpがセットしたCookieはb.example.jpにも送信される)
 				- Domain属性は原則として設定しないのが安全
 				- ちなみに、a.example.jpはDomain属性をexample.comにしてCookieをセットすることは出来ない(セッションIDの固定化攻撃の手段となるため)
+			- Path属性
+				- デフォルトは`/`
+				- example.jpが発行して、Path属性が`/foo`となっているCookieは`/foo`以下のパスでしかCookieが送信されない([参考](https://ema-hiro.hatenablog.com/entry/2018/01/24/022902))
+					- `example.jp/foo`, `example.jp/foo/bar`には送信される
+					- `example.jp/foobar`には送信されない
+				- デフォルトで良いが、パス毎に異なるセッションIDを発行したい場合はPath属性を指定する
 			- Secure属性
 				- Secure属性がついたHTTPS通信の場合にのみサーバに送信される
 			- HttpOnly属性
