--- a/journals/2023_08_20.md
+++ b/journals/2023_08_20.md
@@ -37,7 +37,9 @@
 			- iframeは隠しておいて、サイト(http://example.jp)へのログインを促す
 	- 対策
 		- リクエスト中に含まれるセッションIDに情報を紐づけるのではなく、サーバ側で新たにセッションIDを生成し、これに情報を紐付け、このセッションIDをCookieにセットする(前のセッションIDは削除する)
-		- ↑が出来ない時(そんな時ある？)はトークンを利用する
+		- トークンを利用する方法
+		  id:: 64e19f0d-9e36-4788-8940-87cf0bc35d12
+			- ↑が出来ない時(そんな時ある？)に使う
 			- 新規登録したタイミングで、セッションIDに情報を紐付けるだけでなく、サーバでトークンを生成し、このトークンをセッション変数とCookieにセットする
 			- 認証後のページはトークンを検証する
 			- 攻撃者はトークンを知らないため、利用者の個人情報を見ることが出来ない
