--- a/journals/2023_08_23.md
+++ b/journals/2023_08_23.md
@@ -16,7 +16,7 @@
 		- HMACを使う
 		- 署名というが、デジタル署名のように秘密鍵を使って暗号化するわけではない
 	- まず署名に使う鍵をGCSに登録する
-	- PDFをアップロードするリクエストが飛んできたとき、サーバはGCSに署名付きURLを作成するリクエストを投げる
+	- PDFをダウンロードするリクエストが飛んできたとき、サーバはGCSに署名付きURLを作成するリクエストを投げる
 		- リクエスト中で事前に登録しておいた鍵の中でどれを使うかを指定する
 		- 署名付きURLが有効である期限をリクエストに含めることが出来る
 	- サーバからのリクエストを受けてGCSは署名付きURLを作成する
@@ -37,3 +37,4 @@
 		- おそらく上に書いた処理と同様のことをしている
 		- 購読終了リンクの作成に使ったりする
 			- 購読終了する時にログインしなくて済むのは便利
+			- ユーザにuuidを割り当てている場合、クエリパラメータにuuidを設定した購読終了リンクを使っても良いけど、サーバ側で保存されている署名の鍵よりもuuidの方が漏洩する可能性が高い(APIのレスポンスなどで)ので、署名付きURLを使った方が安全と言える
