--- a/journals/2023_08_18.md
+++ b/journals/2023_08_18.md
@@ -10,6 +10,7 @@
 			    <input type="submit" value="アップロード">
 			  </form>
 			  ```
+			- formタグのenctype属性はリクエストのContent-Typeを決めることが出来て、指定しない場合はapplication/x-www-form-urlencodedになる([参考](https://www.tagindex.com/html_tag/form/form_enctype.html))
 			- そういえば、ファイル名でもXSSが発生する可能性があるので注意
 				- <img src="ファイル名">の時に、ファイル名を`"><script>alert(document.cookie)</script>`にするなど
 		- しかし、JavaScriptを使うことでCSRFが可能
