--- a/journals/2023_08_21.md
+++ b/journals/2023_08_21.md
@@ -79,6 +79,7 @@
 	- 対策
 		- 外部からファイル名を指定出来ないようにする
 			- ファイル名を固定にする、番号で間接的に指定するなど
+			  id:: 64e37bcb-ecb1-46e1-814a-0c1b9a428f18
 		- ファイル名にディレクトリ名が含まれないようにする
 			- PHPのbasename関数を使うとディレクトリ付きのファイル名から最後の名前の部分を取り出すことが出来る(`../../../../../../etc/passwd`なら`passwd`となる)
 				- OS毎に違うディレクトリの記号を考慮して作られている
