--- a/journals/2023_08_28.md
+++ b/journals/2023_08_28.md
@@ -2,6 +2,7 @@
 - ## 4章 Webアプリケーションの機能別に見るセキュリティバグ(続き)
 - ### 4.12 ファイルアップロードにまつわる問題(続き)
 - #### 4.12.2 アップロードファイルによるサーバ側スクリプト実行
+  id:: 64eac190-6bec-4bd7-a7d0-c4fd69cfac13
 	- 外部から送信したスクリプトが実行されると、OSコマンド・インジェクションと同様の影響がある
 	- example.jpのドメインに、画像ファイルをアップロードする機能があって、アップロードされた画像は/imgに保存されて公開されるとする
 		- 例えばsample.pngをアップロードしたらexample.jp/img/sample.pngに保存されて、example.jp/img/sample.pngにアクセスすると、画像を見ることが出来る
@@ -37,6 +38,7 @@
 	- 攻撃する手順、対策は理解出来なかった
 - ### 4.13 インクルードにまつわる問題
 - #### 4.13.1 ファイルインクルード攻撃
+  id:: 64ecb9bf-0e5e-41e5-b87c-377293d0d44e
 	- PHPではrequire, require_once, include, include_onceを使うことで、ソースの一部を別ファイルから読み込むことが出来る([参考](https://wp-p.info/tpl_rep.php?cat=php-beginner&fl=r14))
 	- 読み込むファイル名を外部から指定出来る場合、意図しないファイルが指定され、機密ファイルの閲覧や任意のスクリプトの実行に繋がる
 	- 例
