--- a/journals/2023_08_28.md
+++ b/journals/2023_08_28.md
@@ -19,6 +19,7 @@
 		- 拡張子のチェックに加えて、アップロードされたファイルを公開ディレクトリに保存せず、スクリプト経由で閲覧させる
 			- 例えば、ファイルを/var/uploadに保存し、image.php?file=sample.pngにアクセスすると、image.phpが/var/upload/sample.pngを読み取って表示するなど
 - #### 4.12.3 ファイルダウンロードによるクロスサイト・スクリプティング
+  id:: 64eca50c-bd67-41f2-91a4-bc9815a45c2d
 	- IE限定で発生する脆弱性
 	- PDFをアップロードするアプリケーションで、download.php?file=...にアクセスすると、クエリパラメータで指定したPDFがダウンロード出来るとする
 	- download.phpによって返されるContent-Typeヘッダがapplication/x-pdfになっているとする(これは間違ったContent-Typeで、正しくはapplication/pdf)
@@ -29,7 +30,7 @@
 		- Content-Typeを正しく設定する
 		- レスポンスヘッダにX-Content-Type-Options: nosniffを指定する([参考](https://developer.mozilla.org/ja/docs/Web/HTTP/Headers/X-Content-Type-Options))
 			- マイクロソフトが実装
-			- Content-TypeヘッダのみからContent-Typeを解釈するようになる
+			- Content-Typeヘッダのみからファイルタイプを解釈するようになる
 		- レスポンスヘッダにContent-Disposition: attachmentを指定する
 			- ブラウザに表示するのではなく、ダウンロードするファイルであることをブラウザに伝える([参考](https://www.wakuwakubank.com/posts/799-it-content-type-content-disposition/))
 - #### 4.12.4 PDFのFormCalcによるコンテンツハイジャック
