--- a/journals/2023_08_30.md
+++ b/journals/2023_08_30.md
@@ -30,6 +30,13 @@
 				- シリアライズとは、構造を持ったデータを保存や伝送に適したバイト列に変換すること、と説明されている
 					- 例えば、配列をデータベースに保存したい時に、要素をカンマで区切った文字列を保存する、などだろうか
 				- evalはコードを実行する関数であり、シリアライズに使うというのはどういうことか分からない
+					- (2023/9/5 追記) evalを使ってJSONを表す文字列からJSONオブジェクトへの変換が出来るらしい(なのでデシリアライズにevalを使うというべきか)([参考](https://www.javadrive.jp/javascript/global_function/index5.html))
+						- ```javascript
+						  let json = "{'name':'taro', 'age':'20'}";
+						  let obj = eval('(' + json + ')');
+						  console.log(obj.name, obj.age);
+						  ```
+						- なんで丸括弧で囲む必要があるのか → [参考](https://language-and-engineering.hatenablog.jp/entry/20081022/1224597688)
 			- evalと同等の機能を持つ関数も使わない
 				- 例えば[create_function](https://www.php.net/manual/ja/function.create-function.php)など
 				- 関数の中にメール送信などの不正なコードを埋め込まれてしまう
