--- a/journals/2023_09_05.md
+++ b/journals/2023_09_05.md
@@ -31,7 +31,8 @@
 			- サーバ側の処理に必要なパラメータもクエリパラメータで渡す
 			- 例えば`<script src="http://api.example.jp?callback=showUser&user_id=1">`など
 		- サーバ側では以下のような処理をする(PHPの例)
-			- ```php
+			- id:: 64f6dfb6-389c-45df-af8b-2a121c4530cc
+			  ```php
 			  <?php
 			    $callback = $_GET['callback'];
 			    $user_id = $_GET['user_id'];
@@ -101,3 +102,14 @@
 		- XMLHttpRequestなどCORS対応の機能だけから呼び出せるようにする
 			- jQueryなどでHTTPリクエストを送信すると自動的に`X-Requested-With: XMLHttpRequest`というリクエストヘッダを付与する
 			- このリクエストヘッダが付与されていなかったら不正なリクエストとして扱うことで、上述のXSSを防ぐことが出来る
+- #### 4.16.4 JSONPのコールバック関数名によるXSS
+	- JSONPでは外部からコールバック関数を指定出来るようにしていることがほとんどで、このコールバック関数名を使ってXSSが可能な場合がある
+	- 上で書いた ((64f6dfb6-389c-45df-af8b-2a121c4530cc)) において6行目のContent-Typeの指定を忘れたとする
+	- するとContent-Typeはデフォルトのtext/htmlになる
+	- `?callback=<script>alert(1)</script>`というクエリパラメータでAPIにアクセスされると、レスポンスは`<script>alert(1)</script>({"name": "taro", "age": 20})`のようになる
+	- Content-Typeにより、このレスポンスはHTMLとして解釈されるためalert(1)が実行される
+	- 対策
+		- コールバック関数名の文字種と文字数を制限する
+			- 通常の利用の範囲であれば、英数字とアンダースコアのみに限定して良い
+			- 文字数を制限すればより安全と言える
+		- Content-Typeヘッダを正しく設定する
