--- a/journals/2023_09_05.md
+++ b/journals/2023_09_05.md
@@ -24,8 +24,13 @@
 				    document.body.appendChild(div2);
 				  };
 				  ```
-				- `obj`に`{"name": "<script>alert(1)</script>", "age": 20}`などが入るとXSSが起こりそうだが、innerTextを使うことで特殊記号がエスケープされる
-					- innerTextではなくinnerHTMLを使うとXSSが起こる([参考](https://note.affi-sapo-sv.com/js-htmltag-escape.php))
+				- `obj`に`{"name": "<script>alert(1)</script>", "age": 20}`などが入るとXSSが起こりそうだが、innerTextを使うことで特殊記号がエスケープされる([参考](https://note.affi-sapo-sv.com/js-htmltag-escape.php))
+					- ~~innerTextではなくinnerHTMLを使うとXSSが起こる~~
+					- (2023/09/13) innerHTMLを使った場合は特殊記号がエスケープされないものの、innerHTMLでDOMに入れられたscriptタグは実行されないと規定されているらしい([参考](https://zenn.dev/k41531/articles/44b6dbd5f67ff9))
+						- しかし、XSSが出来ないわけではなく、イベントハンドラを使ってXSS可能(`<img src=/ onerror=<script>alert(1)</script>>`など)
+							-
+						-
+						-
 		- APIはscriptタグのsrc属性を使って呼び出す
 			- クエリパラメータに上で作成した関数名(showUser)を指定する
 			- サーバ側の処理に必要なパラメータもクエリパラメータで渡す
