--- a/journals/2023_08_13.md
+++ b/journals/2023_08_13.md
@@ -95,6 +95,7 @@
 			- 現在は全てのブラウザでXST攻撃の対策がされているため、サーバでTRACEメソッドを許可していても、脆弱性とまではいかない([参考](https://blog.tokumaru.org/2013/01/TRACE-method-is-not-so-dangerous-in-fact.html))
 - #### 4.3.2 クロスサイト・スクリプティング(発展編)
 	- href属性やsrc属性のXSS
+	  id:: 64d87ad2-9abb-4302-80b8-7bc3eb5b6542
 		- 例 : `<a href="<?php echo htmlspecialchars($_GET['url']); ?>">リンク</a>`
 			- urlに`javascript:alert(document.cookie)`を与えると、リンクをクリックした時にJavaScriptが実行されてしまう
 				- javascriptスキームといい、他にもvbscriptスキーム(vbscript://)がある
