--- a/journals/2023_08_20.md
+++ b/journals/2023_08_20.md
@@ -45,6 +45,7 @@
 			- 攻撃者はトークンを知らないため、利用者の個人情報を見ることが出来ない
 - ### 4.7 リダイレクト処理にまつわる脆弱性
 - #### 4.7.1 オープンリダイレクト
+  id:: 64e1a150-38ae-4857-9ce1-ca4d7d02bfbc
 	- リダイレクトはLocationヘッダを使う方法と、JavaScriptを使う方法(location.href="...")がある
 	- リダイレクト先を外部から指定できるようになっている(クエリパラメータなどで)と、個人情報を盗まれる可能性がある
 		- リダイレクト先がオープンであるという意味で、オープンリダイレクト
@@ -58,7 +59,7 @@
 		- 罠サイトは正規サイトのログイン失敗画面に似せて作る
 		- 利用者はパスワードを間違えたと思って、再度IDとパスワードを入力してログインボタンを押す
 		- この時に攻撃者のサーバにIDとパスワードが送られるようにする
-		- さらに、正規サイトのログイン画面に遷移するようにしておけば、利用者は今度はログインが成功したと思い、気づかれにくくなる
+		- さらに、正規サイトのログイン完了画面に遷移するようにしておけば、利用者は今度はログインが成功したと思い、気づかれにくくなる
 	- 対策
 		- リダイレクト先のURLを固定し、外部から指定出来ないようにする
 		- やむを得ず、リダイレクト先を可変にしたい場合は、リダイレクト先のURLを直接指定せず番号指定にする
