--- a/journals/2023_09_14.md
+++ b/journals/2023_09_14.md
@@ -37,7 +37,7 @@
 				  ```
 			- 画像の読み込みに失敗するのでonerrorで指定した処理が実行される
 		- フラグメント識別子を`<script>alert(1)</script>`にしてもalert(1)が実行されるように思われるが、実行されない
-			- これはHTML5で規定されていることらしい([参考](https://zenn.dev/k41531/articles/44b6dbd5f67ff9))
+			- HTML5で、innerHTMLで埋め込んだscriptタグは実行されないと規定されているらしい([参考](https://zenn.dev/k41531/articles/44b6dbd5f67ff9))
 		- 作成したHTMLファイルは攻撃例としては分かりやすいが、実際にフラグメント識別子をDOMを使って表示内容に組み込むといったことは多分無いだろう
 	- docuemnt.writeによるDOM Based XSS
 		- innerHTMLでscriptタグを埋め込んでも実行されなかったが、document.writeでは実行される
@@ -89,6 +89,7 @@
 				  <div id="content"><img src="/" onerror="alert(1)"></div>
 				  ```
 	- jQueryのセレクタの動的生成によるXSS
+	  id:: 65034386-9cb7-4f83-b9ec-9c969ec505b2
 		- jQueryにはセレクタと呼ばれる操作したいHTMLタグを指定する機能がある
 		- セレクタはjQuery()という関数で利用出来るが、多くの場合は$()という別名で利用される
 			- `$('#idname')` : id属性がidnameであるものを取得
