--- a/journals/2023_07_24.md
+++ b/journals/2023_07_24.md
@@ -17,6 +17,7 @@
 		- ハッシュ値の長さは、メッセージの長さとは無関係
 			- SHA-256の場合、ハッシュ値は常に256ビット
 - ### 一方向ハッシュ関数が満たすべき性質
+  id:: 64be7f6f-bd68-415a-8ab2-c5d827610760
 	- 任意長のメッセージを入力可能 & ハッシュ値が固定長
 		- メッセージが長ければ長いほど、ハッシュ値も長くなってしまったら困る
 	- ハッシュ値を高速に計算出来る
@@ -79,4 +80,4 @@
 	- [ハッシュ化のソルト(salt)とペッパー(pepper)についてまとめた - Qiita](https://qiita.com/YutaManaka/items/93444c803cf3087af2b5)
 		- ソルトをDBに保存していると、漏洩時にハッシュ値からパスワードを特定できてしまう
 		- 環境変数から読み取るソルトのことをペッパーと呼ぶらしい
-			- 普通、環境変数では？という感じがするが...
+			- ~~普通、環境変数では？という感じがするが...~~ (2023/09/18 そんなことはない)
