--- a/journals/2023_09_17.md
+++ b/journals/2023_09_17.md
@@ -43,7 +43,7 @@
 - #### 4.17.2 Webストレージの不適切な使用
 	- Cookieはリクエスト毎に自動的にサーバに送信されるが、Webストレージは自動的には送信されない
 	- localStorageは永続的なストレージ、sessionStorageはブラウザのタブが開いている間だけ保持されるストレージ
-		- sessionStorageは他のタブから見ることも出来ない
+		- localStorageは他のタブから見れるが、sessionStorageは見れない
 		- 以下のように操作が出来る
 			- ```javascript
 			  localStorage.setItem('key1', 'hoge');
@@ -53,6 +53,10 @@
 	- 両方とも他のオリジンからアクセスすることは出来ない
 	- 両方ともJavaScriptからのアクセスを禁止することが出来ない
 		- XSSで漏洩する可能性があるため、重要情報をlocalStorage, sessionStorageに保存してはいけない
+	- Cookieの容量が約4KBなのに対して、sessionStorageとlocalStorageの容量は約5MB([参考](https://zenn.dev/tm35/articles/584ece2d771a4b))
+	- サーバとやり取りする必要がない、かつ重要情報でないデータはsessionStorage, localStorageに保存した方が良いと考えられる
+		- ダークモードかライトモードかの設定をlocalStorageに保存するなど
+			- Twitterではnight_modeという名前でCookieに保存していた
 - #### 4.17.3 postMessage呼び出しの不備
 	- postMessageとは異なるオリジン間でデータのやり取りを行う仕組みで、iframeを介して通信を行う([参考](https://blog.katsubemakito.net/html5/webstorage-crossorigin))
 	- 異なるオリジン間のデータのやり取りではないが、ローカルで試す
