--- a/journals/2023_09_19.md
+++ b/journals/2023_09_19.md
@@ -1,4 +1,76 @@
-# 徳丸本
+# レインボーテーブルについて
+- ## 概要
+	- SQLインジェクションなどでDBに保存されているパスワードのハッシュ値を手に入れたとする
+	- このハッシュ値から元のパスワードを求めたい
+	- 単純な方法としては(パスワード、ハッシュ値)のペアを事前に大量に用意しておくというものである
+	- しかし、この方法では莫大な記憶領域が必要になるという問題が存在する
+		- パスワードの集合が正規表現で[a-zA-Z0-9]{1,12}であるとすると、62^12(=3.2x10^21)個ほどのペアを記録しておかないといけない
+	- レインボーテーブルはこの問題を解決する(より少ない記憶領域で元の平文を手に入れることが出来る)
+- ## 仕組み
+- ### 還元関数について
+	- 突然だが、還元関数というものを考える
+	- 還元関数はハッシュ値を入力として、適当な処理をして、パスワードの候補を出力する関数のことである
+		- 出力がパスワードの候補であれば、どんな関数でも良い
+			- パスワードの集合が[a-zA-Z0-9]{1,12}なのに`abc!`(!が使われている)を出力したり、`abcdefghijklmn`(14文字)を出力したりする関数は駄目
+		- パスワードの集合が[a-zA-Z0-9]{1,12}である場合は、ハッシュ値を10進数として解釈した値を62^12で割った余りを62進数として解釈した値を出力する還元関数などが考えられる
+			- 例えばハッシュ値が16進数で`AB`だとすると、10進数で解釈した値は171となる
+			- 171 = 62 x 2 + 47 であり、0→a, ..., 25→z, 26→A, ..., 51→Z, 52→0, ..., 61→9と対応付けし、62進数で解釈すると、`cV`となる
+			- つまり、この還元関数は`AB`を受け取ったら`cV`を返す、他の入力についても同様
+- ### レインボーテーブルの作成
+	- $N$と$M$という正の整数のパラメータを用意する
+	- [a-zA-Z0-9]{1,12}からランダムに$N$個選択し、これらを$P_{1,1}, \ldots, P_{N,1}$とする
+		- 集合を実際に作る必要はなく、1~12の中からランダムに1つ選択し(これを$x$とする)、[a-zA-Z0-9]の中から$x$回ランダムに選択すれば良い
+	- $P_{1,1}, \ldots, P_{N,1}$から、
+		- $P_{1,1} \rightarrow C_{1,1} \rightarrow P_{1,2} \rightarrow C_{1,2} \rightarrow \ldots \rightarrow P_{1,M} \rightarrow C_{1,M}$
+		- $\vdots$
+		- $P_{N,1} \rightarrow C_{N,1} \rightarrow P_{N,2} \rightarrow C_{N,2} \rightarrow \ldots \rightarrow P_{N,M} \rightarrow C_{N,M}$
+		- という列を作り出す
+		- $C_{i,j} = H(P_{i,j}), P_{i,j} = R(C_{i,j-1})$と計算される
+			- $H$はハッシュ関数、$R$は還元関数である
+		- 簡単に言うと、パスワードとハッシュ値を交互に繰り返した列を$N$個作る
+			- 一つの列のことをチェインと呼ぶ
+			- $N$はチェイン数、$M$はチェインの長さを表すパラメータである
+			- $N$個のチェインを並べた時に虹みたく見えるからレインボーテーブルと呼ぶのだと思う
+	- レインボーテーブルでは、全ての列を丸々記憶するのではなく、$(P_{1,1}, C_{1,M}), \ldots, (P_{N,1}, C_{N,M})$だけを記憶する
+		- 記憶する値の個数は$2N$個である
+		- 概要で述べた単純な方法では$2NM$個保存することになる
+	- $(P_{1,1}, C_{1,M}), \ldots, (P_{N,1}, C_{N,M})$を使って、ハッシュ値から元のパスワードを求める
+		- 重要な点として、元のパスワードが$P_{1,1}, \ldots, P_{1,M}, \ldots, P_{N,1}, \ldots, P_{N,M}$に含まれない場合は失敗する
+		- これは概要で述べた単純な方法でも同じことである
+		- もし一つのチェインの中で、$P_{i,j}$と$P_{i,k}$が同じ値になってしまうと、$P_{i,j+1}$と$P_{i,k+1}$が同じ、$P_{i,j+2}$と$P_{i,k+2}$が同じ、...という風に記憶領域の無駄遣いになってしまう
+		- そこで、還元関数を$R_1, \ldots, R_{M-1}$の$M-1$個用意する
+		- $P_{i,2}=R_{1}(C_{i,1}), \ldots, P_{i,M}=R_{M-1}(C_{i,M-1})$のように計算する
+		- $R_i$は上に書いた還元関数の例を少し修正することで設計出来る
+			- ハッシュ値を10進数として解釈した値に$i$を加えて、62^12で割った余りを62進数として解釈した値を出力する([参考](https://crypto.stackexchange.com/questions/37832/how-to-create-reduction-functions-in-rainbow-tables))
+		- これによって、$P_{i,j}$と$P_{i,k}$が同じ値になってしまったとしても、上で説明したような記憶領域の無駄遣いを無くすことが出来る
+- ### レインボーテーブルを使ったパスワードの特定
+	- 対象のハッシュ値を$C_x$とする
+	- まずパスワードが$P_{1,M}, \ldots, P_{N,M}$の中にないかを調べる
+		- これは$C_x$が$C_{1,M}, \ldots, C_{N,M}$の中に含まれているかをチェックすれば良い
+		- もし$C_x = C_{i,M}$ならば、パスワードは$P_{i,M}$ということになる
+		- $P_{i,M}$は、$P_{i,1}$から順にハッシュ関数と還元関数を適用していくことで求められる
+	- 次にパスワードが$P_{1,M-1}, \ldots, P_{N,M-1}$の中にないかを調べる
+		- これは$H(R_{M-1}(C_x))$が$C_{1,M}, \ldots, C_{N,M}$の中に含まれているかをチェックすれば良い
+		- もし$H(R_{M-1}(C_x)) = C_{i,M}$ならば、パスワードは$P_{i,M-1}$ということになる
+		- $P_{i,M-1}$は、$P_{i,1}$から順にハッシュ関数と還元関数を適用していくことで求められる
+	- 次にパスワードが$P_{1,M-2}, \ldots, P_{N,M-2}$の中にないかを調べる
+		- これは$H(R_{M-1}(H(R_{M-2}(C_x))))$が$C_{1,M}, \ldots, C_{N,M}$の中に含まれているかをチェックすれば良い
+		- もし$H(R_{M-1}(H(R_{M-2}(C_x)))) = C_{i,M}$ならば、パスワードは$P_{i,M-2}$ということになる
+		- $P_{i,M-2}$は、$P_{i,1}$から順にハッシュ関数と還元関数を適用していくことで求められる
+	- 以下同様である
+- ### 効率
+	- 単純な方法と比べて、記憶領域が削減されるのは既に述べた通りである
+	- では計算時間はどうなるか
+	- ハッシュ関数と還元関数の計算量を定数とする
+	- $C_{1,M}, \ldots, C_{N,M}$に含まれているかの判定をナイーブに線形で行うと、全体で$O(M(N+M))$である
+	- $C_{1,M}, \ldots, C_{N,M}$に含まれているかの判定を順序付き集合で行うと、全体で$O(M(logN+M))$である
+		- 単純な方法では$O(MN)$であり、定数倍はどちらも軽いことから、$N$と$M$と適切に選択することで、計算時間も短くすることが出来ることが分かる
+		- 例えば、$MN=1000000$である時、$N=10000, M=100$とすると$M(logN+M)$は約$10000$になり、これは$MN$の値よりもずっと小さい
+	- $M$を小さくして$N$を大きくすると、計算時間は短くなるが、必要な記憶領域が増え、$M$を大きくして$N$を小さくすると、計算時間は長くなるが、必要な記憶領域が減るというトレードオフがある
+- ## 実装
+	- https://github.com/roaris/rainbow-table
+-
+- # 徳丸本
 - ## 5章 代表的なセキュリティ機能(続き)
 - ### 5.1 認証(続き)
 - #### 5.1.4 自動ログイン
@@ -64,7 +136,7 @@
 - #### 5.2.1 ユーザ登録
 	- メールアドレスの受信確認
 		- メールアドレスの登録、変更時には、入力されたメールアドレスに送信されるメールを利用者自身が受信出来ることを確認するべき
-			- パスワード変更やアカウントロックの発生時にメール通知をするようにしていても、間違ったメールアドレスが登録されていると、気づけないため
+			- パスワード変更やアカウントロックの発生時にメール通知をするようにしていても、間違ったメールアドレスが登録されていると、利用者にメールが届かず、気づけないため
 		- 以下の2つの方法がある
 			- メールにトークン付きURLを添付して、そのURLを開かれたらOKとする
 				- トークンとメールアドレスの対応をデータベースなどで保存しておく
