--- a/journals/2023_09_19.md
+++ b/journals/2023_09_19.md
@@ -62,11 +62,13 @@
 	- 単純な方法と比べて、記憶領域が削減されるのは既に述べた通りである
 	- では計算時間はどうなるか
 	- ハッシュ関数と還元関数の計算量を定数とする
-	- $C_{1,M}, \ldots, C_{N,M}$に含まれているかの判定をナイーブに線形で行うと、全体で$O(M(N+M))$である
-	- $C_{1,M}, \ldots, C_{N,M}$に含まれているかの判定を順序付き集合で行うと、全体で$O(M(logN+M))$である
-		- 単純な方法では$O(MN)$であり、定数倍はどちらも軽いことから、$N$と$M$と適切に選択することで、計算時間も短くすることが出来ることが分かる
-		- 例えば、$MN=1000000$である時、$N=10000, M=100$とすると$M(logN+M)$は約$10000$になり、これは$MN$の値よりもずっと小さい
-	- $M$を小さくして$N$を大きくすると、計算時間は短くなるが、必要な記憶領域が増え、$M$を大きくして$N$を小さくすると、計算時間は長くなるが、必要な記憶領域が減るというトレードオフがある
+	- 前計算については、単純な方法、レインボーテーブルともに$O(NM)$である
+		- ただし、レインボーテーブルの方が定数倍が重い
+	- パスワードの特定は、ファイル読み込みと特定部分に分かれる
+		- ファイル読み込みは、単純な方法が$O(NM)$、レインボーテーブルが$O(N)$である
+		- 特定部分は、単純な方法が$O(NM)$、レインボーテーブルについては$O(M(N+M))$である
+	- レインボーテーブルの$N$と$M$にはトレードオフがある
+		- $M$を小さくして$N$を大きくすると、特定部分の計算時間は短くなるが、必要な記憶領域が増え、$M$を大きくして$N$を小さくすると、特定部分の計算時間は長くなるが、必要な記憶領域が減るというトレードオフがある(計算時間がどうなるかは、$M$を$x$倍し、$N$を$\frac{1}{x}$倍するとどうなるかを考えると分かる)
 - ## 実装
 	- https://github.com/roaris/rainbow-table
 -
