--- a/journals/2023_09_11.md
+++ b/journals/2023_09_11.md
@@ -5,8 +5,13 @@
 		- そしてfingerprintという値が表示される
 			- 今回は`31W4jOYp3rfBrjZMJASeG5//iwC5StAHdhbspYsAUpQ`という値が出てきた
 			- `ssh-keygen -lf <公開鍵のファイル名 or 秘密鍵のファイル名>`で再度fingerprintを確認することが出来る
-			- fingerprintを見ることで、公開鍵が変化したかのチェックを高速にすることが出来る
-				- 公開鍵が変化しているということは、中間者攻撃の可能性がある([参考](https://superuser.com/questions/421997/what-is-a-ssh-key-fingerprint-and-how-is-it-generated))
+			- fingerprintは公開鍵のSHA256ハッシュをbase64でエンコードしたものらしい([参考](https://qiita.com/hotpepsi/items/128f3a660cee8b5467c6#fingerprint%E3%81%A8%E3%81%AF))
+			- fingerprintを使うことで、公開鍵が一致しているかの確認を効率的に行うことが出来る
+			- ssh接続をする時にfingerprintが表示されることがある
+				- これは/etc/ssh/ssh_host_key.pubのfingerprintである([参考](https://wiki.bit-hive.com/tomizoo/pg/ssh%20%E3%83%91%E3%82%B9%E3%83%AF%E3%83%BC%E3%83%89%E8%AA%8D%E8%A8%BC))
+				- 一度確認したfingerprintは~/.ssh/known_hostsに記録され、2回目以降の接続では表示されなくなる
+				- AWSでインスタンスを立ち上げ直すと毎回fingerprintが表示されているので、/etc/ssh/ssh_host_key.pubが立ち上げのたびに書き変わっていそう
+			- fingerprintが変化している場合、接続先が攻撃者が用意したサーバになっていて、中間者攻撃を受ける可能性がある([参考](https://superuser.com/questions/421997/what-is-a-ssh-key-fingerprint-and-how-is-it-generated))
 		- -tオプションについて
 			- -tでは暗号化形式を選択することができ、rsa, dsa, ecdsa, ed25519から選ぶことが出来る([参考](https://atmarkit.itmedia.co.jp/ait/articles/1908/02/news015.html))
 			- これまでデフォルトはrsaだったが、これがed25519に変わったらしい([参考](https://twitter.com/ttdoda/status/1698872651052458277))
