--- a/journals/2023_09_26.md
+++ b/journals/2023_09_26.md
@@ -56,9 +56,8 @@
 			- これをShift_JISとして解釈すると、`表\''`となり、実行されるSQL文は、`SELECT * FROM users WHERE name='表\'' or 1 = 1; -- '`となり、SQLインジェクションが発生する
 		- A.3. UnicodeによるSQLインジェクションは理解出来ず
 - # SC 過去問
-- ## [令和3年](https://www.ipa.go.jp/shiken/mondai-kaiotu/gmcbt8000000apad-att/2021r03a_sc_pm1_qs.pdf)
-- ### 午後I
-- #### 問1
+- ## [令和3年 午後I](https://www.ipa.go.jp/shiken/mondai-kaiotu/gmcbt8000000apad-att/2021r03a_sc_pm1_qs.pdf)
+- ### 問1
 	- 設問1
 		- (1) 中間者攻撃によって通信を盗聴される
 			- 解答例 : 接続先が保守用中継サーバではない
