--- a/journals/2023_09_08.md
+++ b/journals/2023_09_08.md
@@ -16,6 +16,7 @@
 	- X-XSS-Protection
 		- 反射型XSSをブラウザが検知し、無効化する機能だが、返って脆弱性につながるケースがあるため、現在は非推奨
 	- Content-Security-Policy
+	  id:: 64fb4894-7ce5-4e6c-baa9-1b99f2538e13
 		- Content-Security-Policyヘッダは主にXSSを緩和するためのヘッダ
 		- `Content-Security-Policy: default-src 'self'`とすると、スクリプト、画像、CSSといった全てのメディアをサイト自身のオリジンからのみ読み込む
 			- HTMLページ内に記述するJavaScript(インラインスクリプト)も禁止し、これによってXSSを防ぐ
