--- a/journals/2023_09_26.md
+++ b/journals/2023_09_26.md
@@ -34,9 +34,9 @@
 			- Unicodeでは文字の符号をスカラ値と呼び、U+XXXX(XXXXは4桁から6桁の16進数)で表す
 	- JIS X 0208とUnicodeなどでは、文字に群・面・区・点の番号を割り振る([参考](https://www.tohoho-web.com/ex/charset.html#about))
 		- 群は0~127、面・区・点は0~255の数値を取る
-		- JIS X 0208では1~94区 x 1~94点で、94 x 94 = 8836文字を定義している
-			- 日本語の`あ`は4区1点と定義されている
-		- Unicodeでは0~16面 x 0~255区 x 0~255点で、17 x 256 x 256 = 1114112文字を定義している
+		- JIS X 0208では1~84区 x 1~94点を使用する
+			- 日本語の`あ`は4区2点と定義されている
+		- Unicodeでは0~16面 x 0~255区 x 0~255点を使用する
 			- 日本語の`あ`は0面48区66点と定義されていて、48が0x30、66が0x42であるから、スカラ値はU+3042となる
 		- 群はどの文字集合で使われている？
 	- 文字集合の扱いが原因でSQLインジェクションが起こることがある
@@ -54,6 +54,9 @@
 			- `表'`はShift_JISで0x95 0x5c 0x27と表される(`表`が0x95 0x5cで、`'`が0x27)
 			- 0x5cはUS-ASCIIやISO-8859-1ではバックスラッシュに該当するため、文字エンコーディングを考慮せずにエスケープ処理を施すと、0x27に加えて、0x5cもエスケープ対象と解釈されて、エスケープ結果が0x95 0x5c 0x5c 0x27 0x27となることがある
 			- これをShift_JISとして解釈すると、`表\''`となり、実行されるSQL文は、`SELECT * FROM users WHERE name='表\'' or 1 = 1; -- '`となり、SQLインジェクションが発生する
+				- ```python
+				  print(b'\x95\x5c\x5c\x27\x27'.decode('shift-jis')) # 表\''
+				  ```
 		- A.3. UnicodeによるSQLインジェクションは理解出来ず
 - # SC 過去問
 - ## [令和3年 午後I](https://www.ipa.go.jp/shiken/mondai-kaiotu/gmcbt8000000apad-att/2021r03a_sc_pm1_qs.pdf)
