--- a/journals/2023_10_04.md
+++ b/journals/2023_10_04.md
@@ -1,4 +1,4 @@
-- SC過去問で[令和3年 午後II](https://www.ipa.go.jp/shiken/mondai-kaiotu/gmcbt8000000apad-att/2021r03a_sc_pm2_qs.pdf)の問1を解いたが、Git操作を誤って、書いた内容を吹き飛ばしてしまった(logseq/.recycleが作成されていて、削除しようとして、git clean -dfをしてしまった)
+- SC過去問で[令和3年 午後II](https://www.ipa.go.jp/shiken/mondai-kaiotu/gmcbt8000000apad-att/2021r03a_sc_pm2_qs.pdf)の問1を解いたが、Git操作を誤って、書いた内容を吹き飛ばしてしまった(logseq/.recycleが作成されていて、削除しようとして、git clean -dfをしたらjournals/2023_10_04.mdまで削除されてしまった)
 - また書く気にはならないので、簡単にだけ書いておく
 	- [Content-Security-Policyヘッダについて](https://tech.bitbank.cc/content-security-policy/)
 		- ((64fb4894-7ce5-4e6c-baa9-1b99f2538e13)) でも少し勉強したが、インラインスクリプトの扱いについての設問があり、もう少し調べた
