--- a/journals/2023_08_09.md
+++ b/journals/2023_08_09.md
@@ -1,4 +1,5 @@
 # パディングオラクル攻撃
+- (2023/10/6 この文章の説明は間違っていて、ちゃんと理解出来てないことが分かったので、いつか修正する)
 - [参考](https://partender810.hatenablog.com/entry/2021/06/08/225105)
 - AES + CBCモードを使った暗号化を考える
 - AESのブロック長は128ビット(=16バイト)である
@@ -33,8 +34,8 @@
 		- 例えば、最後の1バイトが0x03であれば、最後の3バイトが全て0x03になっていなければ、エラーとなる
 		- 最後の2バイトが0x01はOK
 - もし、復号化をするサーバが、与えられた暗号文に対して、正しくないパディングがされているというエラーを親切に返すようになっていると、その情報を元に平文を特定することが出来る(パディングオラクル攻撃)
-- 簡単のために、平文の長さが31バイトである場合を考える
-	- 末尾に0x01が追加されて暗号化される
+- 簡単のために、平文の長さが29バイトである場合を考える
+	- 末尾に0x03が3個追加されて暗号化される
 	- 暗号化された結果は32バイト、つまり2ブロックある
 		- 1つ目のブロックを暗号文ブロック1、2つ目のブロックを暗号文ブロック2と呼ぶ
 	- 暗号文ブロック1、暗号文ブロック2を復号化した結果を、それぞれ平文ブロック1、平文ブロック2と呼ぶ
@@ -45,7 +46,7 @@
 	- 攻撃者は暗号文ブロック1を書き換えて、サーバに送信することで、平文ブロック2を特定することが出来る
 		- まず、暗号文ブロック1の最後の1バイトを0x00から0xffまで試す
 			- これによって、平文ブロック2の最後の1バイトは0x00から0xffまで1つずつ試されることになる
-			- 平文ブロック2の最後の1バイトが0x01であれば、パディングのエラーは返ってこないし、0x00、0x01 ~ 0xffであれば、パディングのエラーが返ってくる
+			- 平文ブロック2の最後の1バイトが0x01であれば、パディングのエラーは返ってこないし、0x00、0x02 ~ 0xffであれば、パディングのエラーが返ってくる
 		- 暗号文ブロック1の元々の最後の1バイトが0xbcとし、これを0xa2に書き換えたら、パディングのエラーが返ってこなかったとする
 			- 0xa2に書き換えて、パディングのエラーが返ってこない、つまり、平文ブロック2の最後の1バイトが0x01になったということは、暗号文ブロック2をAESで復号した結果の最後の1バイトが0xa2 ^ 0x01 = 0xa3 ということが分かる
 			- つまり、平文ブロック2の本来の最後の1バイトは0xbc ^ 0xa3 = 0x1f である
@@ -78,7 +79,7 @@
 			      return unpad(dec, 16, style="pkcs7")
 			  
 			  
-			  msg = "abcdefghijklmnopqrstuvwxyzabcde"  # 平文(31バイト)
+			  msg = "abcdefghijklmnopqrstuvwxyzabc"  # 平文(29バイト)
 			  enc_msg = encrypt(msg)  # 暗号文(32バイト)
 			  
 			  # ↓ここから攻撃 暗号文から平文ブロック2を特定する
@@ -101,7 +102,7 @@
 			              continue
 			  
 			  msg_2 = bytearray(enc_msg_1[i] ^ aes_dec_2[i] for i in range(16))
-			  print(unpad(msg_2, 16, style="pkcs7").decode())  # qrstuvwxyzabcde
+			  print(unpad(msg_2, 16, style="pkcs7").decode())  # qrstuvwxyzabc
 			  ```
 			- bytes、bytearrayの操作: https://9cubed.info/article/python/0036
 - 暗号文ブロック1を書き換えて、平文ブロック2を特定する例を説明したが、初期化ベクトルを書き換えることで、平文ブロック1を特定することが出来る
