--- a/journals/2023_10_06.md
+++ b/journals/2023_10_06.md
@@ -60,15 +60,15 @@
 			- DHCPサーバは、IPアドレスを割り当てるだけではなく、サブネットマスクやデフォルトゲートウェイ、DNSサーバも設定する
 				- AndroidのWifi設定→IP設定で静的を選択すると、これらの設定が手動で出来る
 			- 手順
-				- 1. DHCP発見パケット(クライアント→DHCPサーバ)
+				- 1. DHCP発見パケット(DHCP DISCOVER)(クライアント→DHCPサーバ)
 					- DHCPサーバがどこにいるか分からないのでブロードキャストで送信する
-				- 2. DHCP提供パケット(クライアント←DHCPサーバ)
+				- 2. DHCP提供パケット(DHCP OFFER)(クライアント←DHCPサーバ)
 					- 割り当てるIPアドレスを送信する
 					- ユニキャストで送信する
-				- 3. DHCP要求パケット(クライアント→DHCPサーバ)
+				- 3. DHCP要求パケット(DHCP REQUEST)(クライアント→DHCPサーバ)
 					- DHCP提供パケットで受け取った情報を使用することを要求する
 					- 二つ以上のDHCPサーバから提供を受けた時、他のDHCPサーバには要求しないことを同時に通知するためにブロードキャストで送信する(クライアントは通常一番先に届いたDHCP提供パケットのIPアドレスを使用する)
-				- 4. DHCP確認応答パケット(クライアント←DHCPサーバ)
+				- 4. DHCP確認応答パケット(DHCP ACK)(クライアント←DHCPサーバ)
 					- サブネットマスク、デフォルトゲートウェイ、DNSサーバなどを送信する
 					- ユニキャストで送信する
 			- DHCPサーバから提供される情報には有効期間が設定されていて(リース期間という)、これを過ぎると、別のクライアントにIPアドレスが割り当てられる
