--- a/journals/2023_10_09.md
+++ b/journals/2023_10_09.md
@@ -178,6 +178,9 @@
 		- 1. URIを処理出来る優先アプリが指定されている場合は、そのアプリを開く
 		- 2. URIを処理出来るアプリが1つだけしかない場合は、そのアプリを開く
 		- 3. ユーザがダイアログからアプリを選択出来るようにする
+	- 先程同様adbコマンドでActivityを起動することも出来る
+		- `adb shell am start -d intent-practice1://class/main`
+		- -dでURIを指定する
 - ## ディープリンク
 	- Webページのリンクを踏むと、アプリが立ち上がることがある
 	- このリンクをディープリンクという
