--- a/journals/2023_08_26.md
+++ b/journals/2023_08_26.md
@@ -7,7 +7,7 @@
 - ## 1問目 点数差分
 	- https://topsic-contest.jp/contests/contest008/problems/contest008-1
 	- ```sql
-	  select member_id AS ID, score1 - score2 AS DIFF
+	  select member_id as ID, score1 - score2 as DIFF
 	  from contest_results
 	  where abs(score1 - score2) >= 20
 	  order by DIFF DESC, ID DESC;
