--- a/journals/2023_09_26.md
+++ b/journals/2023_09_26.md
@@ -31,6 +31,7 @@
 				- US-ASCII、ISO-8859-1、JIS X 0201、JIS X 0208、JIS X 0213、マイクロソフト標準キャラクタセットを全て包含している
 				- [Unicode文字の一覧](https://ja.wikipedia.org/wiki/Unicode%E4%B8%80%E8%A6%A7_0000-0FFF)
 			- 当初は16ビットで全ての文字を表現する計画だったが、不十分であることが分かり、現在では21ビットに拡張されている
+				- 元々の16ビットで表現出来る範囲を基本多言語面(BMP : Basic Multilingual Plane)と呼ぶ
 			- Unicodeでは文字の符号をスカラ値と呼び、U+XXXX(XXXXは4桁から6桁の16進数)で表す
 	- JIS X 0208とUnicodeなどでは、文字に群・面・区・点の番号を割り振る([参考](https://www.tohoho-web.com/ex/charset.html#about))
 		- 群は0~127、面・区・点は0~255の数値を取る
