--- a/journals/2023_10_07.md
+++ b/journals/2023_10_07.md
@@ -46,7 +46,7 @@
 		- フェールソフト : 障害発生時に機能を縮小してでも継続
 		- フェールセーフ : 障害発生時にシステムを安全な状態に移行
 		- フールプルーフ : ユーザが誤った操作を行なっても安全に稼働させる
-	- IaaSでは利用者がミドルウェアとアプリケーションの用意/管理をするが、PaaSではミドルウェアのアプリケーションの用意/管理はサービス提供業者が行う([参考](https://www.sc-siken.com/kakomon/02_aki/am2_11.html))
+	- IaaSでは利用者がミドルウェアとアプリケーションの用意/管理をするが、PaaSではミドルウェアの用意/管理はサービス提供業者が行う([参考](https://www.sc-siken.com/kakomon/02_aki/am2_11.html))
 	- IP25B([参考](https://wa3.i-3-i.info/word14982.html))
 		- Inbound Port 25 Blockingの略
 		- 動的に割り当てられたIPアドレスからの25番ポート(SMTP)に対する接続を拒否するという迷惑メール対策(SMTPサーバのIPアドレスは基本的に静的)
