--- a/journals/2023_10_20.md
+++ b/journals/2023_10_20.md
@@ -28,6 +28,7 @@
 				  ```
 		- UTF-8([参考](https://www.tohoho-web.com/ex/charset.html#utf-8))
 			- 現在ある文字エンコーディングの中で最も扱いやすく安全な方式
+			- Goの文字列の内部表現はUTF-8
 			- UTF-16ではASCII文字(U+0000 ~ U+007F)が2バイトで表現されるが、UTF-8だと1バイトで表現することが出来る
 			- 以下の変換を行う
 				- U+0000 ~ U+007F (ビット数7)
@@ -39,10 +40,17 @@
 				- U+10000 ~ U+10FFFF (ビット数21)
 					- 変換元ビットをzzzzz yyyyyyyy xxxxxxxxとした時、変換後ビットは11110zzz 10zzyyyy 10yyyyxx 10xxxxxx
 			- 先頭の1の数を数えることでバイト数が分かる(0個の場合は1バイトで、それ以外は個数とバイト数が一致)
-			- 先頭バイトと後続バイトに重なりがないため、Shift-JISやEUC-JPであった、文字の途中から別の文字がマッチするという問題は発生しない
+			- 先頭バイトの範囲がそれぞれ0x00 ~ 0x7f, 0xc0 ~ 0xdf, 0xe0 ~ 0xef, 0xf0 ~ 0xf7
+			- 後続バイトの範囲が0x80 ~ 0xbf
+			- 先頭バイトと後続バイトの範囲に重なりがないため、Shift-JISやEUC-JPであった、文字の途中から別の文字がマッチするという問題は発生しない
 			- 非最短形式の問題([参考](https://gihyo.jp/admin/serial/01/charcode/0004))
-				- 「/」はU+002Fで、U+0000 ~ U+007Fに含まれるので、UTF-8で0x2Fとなる
+				- 「/」はU+002Fで、U+0000 ~ U+007Fに含まれるので、UTF-8で0x2fとなる
 				- しかし、U+0000 ~ U+007F以外のパターンに当てはめて表現することも可能
-					- U+0080 ~ U+07FFに当てはめると、0xC0 0xAF
-					- U+0800 ~ U+FFFFに当てはめると、0xE0 0x80 0xAF
-					- U+10000 ~ U+10FFFFに当てはめると、0xF0 0x80 0x80 0xAF
+					- U+0080 ~ U+07FFに当てはめると、0xc0 0xaf
+					- U+0800 ~ U+FFFFに当てはめると、0xe0 0x80 0xaf
+					- U+10000 ~ U+10FFFFに当てはめると、0xf0 0x80 0x80 0xaf
+				- 非最短形式は以下のようなケースで問題になる
+					- ディレクトリトラバーサル防止のために、UTF-8のデータの中に「/」がないかをチェックするが、非最短形式になっているので検知出来ず、パスしてしまう
+						- バイト列中に0x2fがないか探しても、0xc0 0xafになっていて見つからない
+					- ファイル名として扱う時にShift_JISやUTF-16に変換され、「/」として扱われてしまう
+			- UTF-8の最新規格(RFC3629)では非最短形式は不正であり処理してはならないとされている
