--- a/journals/2023_09_26.md
+++ b/journals/2023_09_26.md
@@ -41,7 +41,7 @@
 			- 日本語の`あ`は0面48区66点と定義されていて、48が0x30、66が0x42であるから、スカラ値はU+3042となる
 		- 群はどの文字集合で使われている？
 	- 文字集合の扱いが原因でSQLインジェクションが起こることがある
-		- [安全なSQLの呼び出し方](https://www.ipa.go.jp/security/vuln/websecurity/ug65p900000196e2-att/000017320.pdf)のp.31 ~ p.34
+	  id:: 65125131-baf5-4058-8766-1172e1f310f8
 		- MySQLやPostgreSQLでは、シングルクォート以外にバックスラッシュもエスケープしなければいけない
 		- これはバックスラッシュが、シングルクォートなどをエスケープするためのメタ文字として解釈されるためである
 			- シングルクォートをエスケープするためには、前にシングルクォートを追加し、`''`とすることでエスケープすることが出来るが、前にバックスラッシュを追加し、`\'`とすることでもエスケープ出来る
@@ -51,6 +51,7 @@
 			- シングルクォートのみエスケープ(前にシングルクォートを追加してエスケープ)してから与えるとすると、`\'' or 1 = 1; -- `を与えることになり、実行されるSQL文は、`SELECT * FROM users WHERE name='\'' or 1 = 1; -- '`となる
 			- `\'`はシングルクォートのエスケープとみなされ、続くシングルクォートはエスケープされず、SQLインジェクションが発生する
 		- バックスラッシュをエスケープする場合でも、文字集合に配慮しないとSQLインジェクションが可能となる場合がある
+		  id:: 6512adbd-74dd-4d3b-ad76-d45db434c220
 			- `$q = "SELECT * FROM users WHERE name='$s'";`というPHPのコードがあった時に、$sに`表' or 1 = 1; -- `をShift_JISで与えるとする
 			- `表'`はShift_JISで0x95 0x5c 0x27と表される(`表`が0x95 0x5cで、`'`が0x27)
 			- 0x5cはUS-ASCIIやISO-8859-1ではバックスラッシュに該当するため、文字エンコーディングを考慮せずにエスケープ処理を施すと、0x27に加えて、0x5cもエスケープ対象と解釈されて、エスケープ結果が0x95 0x5c 0x5c 0x27 0x27となることがある
